--- a/popup/style_editor.html
+++ b/popup/style_editor.html
@@ -3,24 +3,26 @@
   <head>
     <meta charset="UTF-8">
     <title>Custom Style Manager</title>
-  	<link rel="stylesheet" href="css/popup-stylesheet.css" type="text/css">
+    <link rel="stylesheet" href="css/popup-stylesheet.css" type="text/css">
   </head>
 
   <body>
 
-	<p id = "hostname-container" class = "flex block-container"> </p>
-  	<div id = "popup-viewport" class = "viewport flex-container flex-vertical-container">
-  		<div id = "textbox-container" class = "flex block-container">
-  			<textarea id = "popup-textarea" class = "block-container" spellcheck = "false"></textarea>
-  		</div>
-  		<div id = "controls-container" class = "flex flex-container flex-horizontal-container">
-  			<button id = "reset-button" class = "popup-button flex"> Reset </button>
-  			<button id = "apply-button" class = "downward-box-shadow popup-button flex"> Apply </button>
-  		</div>
-  	</div>
 
-  	<script src = "../rules.json"></script>
-  	<script src = "js/popup.js"></script>
+    <div id = "popup-viewport" class = "viewport flex-container flex-vertical-container">
+      <p id = "hostname-container" class = "flex block-container"> </p>
+      <div id = "textbox-container" class = "flex block-container">
+        <textarea id = "popup-textarea" class = "block-container" spellcheck = "false"></textarea>
+      </div>
+      <div id = "controls-container" class = "gap flex flex-container flex-horizontal-container">
+        <button id = "clear-button" class = "popup-button flex"> Clear </button>
+        <button id = "reset-button" class = "popup-button flex"> Undo </button>
+        <button id = "apply-button" class = "downward-box-shadow popup-button flex"> Apply </button>
+      </div>
+    </div>
+
+    <script src = "../rules.json"></script>
+    <script src = "js/popup.js"></script>
 
   </body>
 </html>
